Admin application: use local storage to keep local configuration

--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -239,7 +239,10 @@
     "pageTitle": "Підтвердження електронної пошти",
     "title": "Перевірте вашу електронну пошту",
     "message": "Ми надіслали лист із посиланням для підтвердження на вашу електронну пошту. Будь ласка, перевірте свою пошту та натисніть на посилання, щоб активувати свій обліковий запис.",
-    "login": "Повернутися до входу"
+    "login": {
+      "text": "Вже підтвердили свою електронну адресу?",
+      "link": "Увійти"
+    }
   },
   "confirmEmail": {
     "pageTitle": "Підтвердження електронної пошти",
@@ -251,7 +254,11 @@
     "error": {
       "title": "Помилка підтвердження",
       "message": "Не вдалося підтвердити вашу електронну пошту. Посилання може бути недійсним або закінчився термін його дії.",
-      "register": "Зареєструватися знову"
+      "register": "Зареєструватися знову",
+      "retry": {
+        "text": "Будь ласка, спробуйте ще раз або",
+        "link": "Увійдить"
+      }
     },
     "loading": "Підтвердження вашої електронної пошти..."
   },
