Admin console: first alignment of localization assets

--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -101,11 +101,13 @@
       "capacity": "Місткість",
       "minutes": "хвилин",
       "clients": "клієнтів",
-      "tariffs": {
-        "success": "Тарифи успішно оновлено",
-        "assign": "Призначити тарифи",
-        "title": "Керування тарифами для {{name}}",
-        "empty": "Немає доступних тарифів. Будь ласка, спочатку додайте тарифи."
+      "create": {
+        "success": "Тренування успішно створено",
+        "error": "Не вдалося створити тренування"
+      },
+      "update": {
+        "success": "Тренування успішно оновлено",
+        "error": "Не вдалося оновити тренування"
       },
       "delete": {
         "title": "Видалити тренування",
@@ -113,6 +115,12 @@
         "confirm": "Видалити",
         "success": "Тренування успішно видалено",
         "error": "Помилка при видаленні тренування"
+      },
+      "tariffs": {
+        "success": "Тарифи успішно оновлено",
+        "assign": "Призначити тарифи",
+        "title": "Керування тарифами для {{name}}",
+        "empty": "Немає доступних тарифів. Будь ласка, спочатку додайте тарифи."
       }
     },
     "trainers": {
@@ -169,17 +177,119 @@
       "price": "Ціна",
       "currency": "Валюта",
       "empty": "Тарифів не знайдено. Натисніть кнопку 'Додати тариф', щоб створити один.",
-      "trainings": "тренувань"
+      "trainings": "тренувань",
+      "delete": {
+        "title": "Видалити тариф",
+        "message": "Ви впевнені, що хочете видалити цей тариф? Цю дію неможливо скасувати.",
+        "confirm": "Видалити",
+        "error": {
+          "assigned": "Неможливо видалити тариф '{{name}}', оскільки він зараз призначений на одне або більше тренувань. Будь ласка, спочатку видаліть тариф з усіх тренувань.",
+          "generic": "Сталася помилка під час видалення тарифу. Будь ласка, спробуйте ще раз."
+        },
+        "success": "Тариф '{{name}}' успішно видалено"
+      }
     }
+  },
+  "location": {
+    "create": {
+      "pageTitle": "Додати локацію",
+      "title": "Додати нову локацію"
+    },
+    "edit": {
+      "pageTitle": "Редагувати локацію",
+      "title": "Редагувати локацію"
+    },
+    "update": {
+      "success": "Локацію успішно оновлено"
+    },
+    "details": {
+      "pageTitle": "Деталі локації клубу",
+      "title": "Деталі клубу",
+      "club_location_title": "Деталі локації клубу",
+      "tabs": {
+        "workouts": "Тренування",
+        "trainers": "Тренери",
+        "schedule": "Розклад"
+      },
+      "workouts": {
+        "title": "Доступні тренування",
+        "add": "Додати тренування",
+        "empty": "Поки що немає доступних тренувань. Додайте свій перший тип тренування, щоб почати.",
+        "delete": {
+          "title": "Видалити тренування",
+          "message": "Ви впевнені, що хочете видалити це тренування? Цю дію неможливо скасувати.",
+          "confirm": "Видалити"
+        }
+      },
+      "trainers": {
+        "title": "Тренери клубу",
+        "add": "Додати тренера",
+        "empty": "Поки що немає призначених тренерів. Додайте тренерів, щоб почати створювати розклади.",
+        "delete": {
+          "title": "Видалити тренера",
+          "message": "Ви впевнені, що хочете видалити цього тренера? Цю дію неможливо скасувати.",
+          "confirm": "Видалити"
+        }
+      },
+      "schedule": {
+        "title": "Розклад занять",
+        "add": "Додати розклад",
+        "empty": "Поки що немає запланованих занять. Спочатку додайте тренування та тренерів, потім створіть розклад.",
+        "delete": {
+          "title": "Видалити розклад",
+          "message": "Ви впевнені, що хочете видалити цей розклад занять? Цю дію неможливо скасувати.",
+          "confirm": "Видалити",
+          "success": "Розклад успішно видалено"
+        }
+      }
+    },
+    "form": {
+      "address": "Адреса",
+      "addressRequired": "Адреса обов'язкова",
+      "city": "Місто",
+      "cityRequired": "Місто обов'язкове",
+      "state": "Область",
+      "stateRequired": "Область обов'язкова",
+      "postalCode": "Поштовий індекс",
+      "postalCodeRequired": "Поштовий індекс обов'язковий",
+      "postalCodeInvalid": "Невірний формат поштового індексу",
+      "country": "Країна",
+      "countryRequired": "Країна обов'язкова",
+      "timezone": "Часовий пояс",
+      "timezoneRequired": "Часовий пояс обов'язковий"
+    }
+  },
+  "emailConfirmation": {
+    "pageTitle": "Підтвердження електронної пошти",
+    "title": "Перевірте вашу електронну пошту",
+    "message": "Ми надіслали лист із посиланням для підтвердження на вашу електронну пошту. Будь ласка, перевірте свою пошту та натисніть на посилання, щоб активувати свій обліковий запис.",
+    "login": {
+      "text": "Вже підтвердили свою електронну адресу?",
+      "link": "Увійти"
+    }
+  },
+  "confirmEmail": {
+    "pageTitle": "Підтвердження електронної пошти",
+    "success": {
+      "title": "Електронну пошту підтверджено!",
+      "message": "Ваша електронна пошта була успішно підтверджена. Тепер ви можете увійти до свого облікового запису.",
+      "login": "Увійти"
+    },
+    "error": {
+      "title": "Помилка підтвердження",
+      "message": "Не вдалося підтвердити вашу електронну пошту. Посилання може бути недійсним або закінчився термін його дії.",
+      "register": "Зареєструватися знову",
+      "retry": {
+        "text": "Будь ласка, спробуйте ще раз або",
+        "link": "Увійдить"
+      }
+    },
+    "loading": "Підтвердження вашої електронної пошти..."
   },
   "registration": {
     "pageTitle": "Реєстрація",
     "title": "Створіть обліковий запис",
     "subtitle": "Приєднуйтесь до нас, щоб почати свій фітнес-шлях",
-    "error": {
-      "emailExists": "Користувач з такою електронною поштою вже існує",
-      "generic": "Під час реєстрації сталася помилка. Будь ласка, спробуйте ще раз."
-    },
     "form": {
       "firstName": {
         "label": "Ім'я",
@@ -226,132 +336,14 @@
         "loading": "Реєстрація..."
       }
     },
+    "error": {
+      "emailExists": "Користувач з такою електронною поштою вже існує",
+      "generic": "Під час реєстрації сталася помилка. Будь ласка, спробуйте ще раз."
+    },
     "login": {
       "text": "Вже маєте обліковий запис?",
       "link": "Увійти"
     }
-  },
-  "header": {
-    "profile": "Профіль",
-    "logout": "Вийти"
-  },
-  "emailConfirmation": {
-    "pageTitle": "Підтвердження електронної пошти",
-    "title": "Перевірте вашу електронну пошту",
-    "message": "Ми надіслали лист із посиланням для підтвердження на вашу електронну пошту. Будь ласка, перевірте свою пошту та натисніть на посилання, щоб активувати свій обліковий запис.",
-    "login": {
-      "text": "Вже підтвердили свою електронну адресу?",
-      "link": "Увійти"
-    }
-  },
-  "confirmEmail": {
-    "pageTitle": "Підтвердження електронної пошти",
-    "success": {
-      "title": "Електронну пошту підтверджено!",
-      "message": "Ваша електронна пошта була успішно підтверджена. Тепер ви можете увійти до свого облікового запису.",
-      "login": "Увійти"
-    },
-    "error": {
-      "title": "Помилка підтвердження",
-      "message": "Не вдалося підтвердити вашу електронну пошту. Посилання може бути недійсним або закінчився термін його дії.",
-      "register": "Зареєструватися знову",
-      "retry": {
-        "text": "Будь ласка, спробуйте ще раз або",
-        "link": "Увійдить"
-      }
-    },
-    "loading": "Підтвердження вашої електронної пошти..."
-  },
-  "location": {
-    "create": {
-      "pageTitle": "Додати локацію",
-      "title": "Додати нову локацію",
-      "error": "Помилка при створенні локації",
-      "success": "Локацію успішно створено"
-    },
-    "edit": {
-      "pageTitle": "Редагувати локацію",
-      "title": "Редагувати локацію"
-    },
-    "update": {
-      "success": "Локацію успішно оновлено",
-      "error": "Помилка при оновленні локації"
-    },
-    "delete": {
-      "success": "Локацію успішно видалено",
-      "error": "Помилка при видаленні локації"
-    },
-    "form": {
-      "address": "Адреса",
-      "addressRequired": "Адреса обов'язкова",
-      "city": "Місто",
-      "cityRequired": "Місто обов'язкове",
-      "state": "Область",
-      "stateRequired": "Область обов'язкова",
-      "postalCode": "Поштовий індекс",
-      "postalCodeRequired": "Поштовий індекс обов'язковий",
-      "postalCodeInvalid": "Невірний формат поштового індексу",
-      "country": "Країна",
-      "countryRequired": "Країна обов'язкова",
-      "timezone": "Часовий пояс",
-      "timezoneRequired": "Часовий пояс обов'язковий"
-    },
-    "details": {
-      "pageTitle": "Деталі локації клубу",
-      "title": "Деталі клубу",
-      "club_location_title": "Деталі локації клубу",
-      "tabs": {
-        "workouts": "Тренування",
-        "trainers": "Тренери",
-        "schedule": "Розклад"
-      },
-      "workouts": {
-        "title": "Доступні тренування",
-        "add": "Додати тренування",
-        "empty": "Поки що немає доступних тренувань. Додайте свій перший тип тренування, щоб почати.",
-        "delete": {
-          "title": "Видалити тренування",
-          "message": "Ви впевнені, що хочете видалити це тренування? Цю дію неможливо скасувати.",
-          "confirm": "Видалити"
-        }
-      },
-      "trainers": {
-        "title": "Тренери клубу",
-        "add": "Додати тренера",
-        "empty": "Поки що немає призначених тренерів. Додайте тренерів, щоб почати створювати розклади.",
-        "delete": {
-          "title": "Видалити тренера",
-          "message": "Ви впевнені, що хочете видалити цього тренера? Цю дію неможливо скасувати.",
-          "confirm": "Видалити"
-        }
-      },
-      "schedule": {
-        "title": "Розклад занять",
-        "add": "Додати розклад",
-        "empty": "Поки що немає запланованих занять. Спочатку додайте тренування та тренерів, а потім створіть розклад.",
-        "delete": {
-          "title": "Видалити розклад",
-          "message": "Ви впевнені, що хочете видалити цей розклад занять? Цю дію неможливо скасувати.",
-          "confirm": "Видалити",
-          "success": "Розклад успішно видалено"
-        }
-      }
-    }
-  },
-  "schedule": {
-    "weekly_view": "Тижневий вигляд",
-    "daily_view": "Щоденний вигляд",
-    "days": {
-      "monday": "Понеділок",
-      "tuesday": "Вівторок",
-      "wednesday": "Середа",
-      "thursday": "Четвер",
-      "friday": "П'ятниця",
-      "saturday": "Субота",
-      "sunday": "Неділя"
-    },
-    "no_schedules": "Немає розкладів на цей день",
-    "classes": "занять"
   },
   "trainer": {
     "create": {
@@ -410,6 +402,25 @@
         "placeholder": "Введіть спеціалізацію (напр. Йога, Кросфіт)"
       }
     }
+  },
+  "header": {
+    "profile": "Профіль",
+    "logout": "Вийти"
+  },
+  "schedule": {
+    "weekly_view": "Тижневий вигляд",
+    "daily_view": "Щоденний вигляд",
+    "days": {
+      "monday": "Понеділок",
+      "tuesday": "Вівторок",
+      "wednesday": "Середа",
+      "thursday": "Четвер",
+      "friday": "П'ятниця",
+      "saturday": "Субота",
+      "sunday": "Неділя"
+    },
+    "no_schedules": "Немає розкладів на цей день",
+    "classes": "занять"
   },
   "payment": {
     "status": {
