Admin console: second alignment of localization assets

--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -259,6 +259,62 @@
       "timezoneRequired": "Часовий пояс обов'язковий"
     }
   },
+  "training": {
+    "create": {
+      "pageTitle": "Створити тренування",
+      "title": "Додати нове тренування",
+      "subtitle": "Створіть новий тип тренування для вашого клубу"
+    },
+    "edit": {
+      "pageTitle": "Редагувати тренування",
+      "title": "Редагувати тренування",
+      "subtitle": "Оновити деталі тренування"
+    },
+    "form": {
+      "name": {
+        "label": "Назва тренування",
+        "placeholder": "Введіть назву тренування",
+        "required": "Назва тренування обов'язкова"
+      },
+      "description": {
+        "label": "Опис",
+        "placeholder": "Введіть опис тренування"
+      },
+      "duration": {
+        "label": "Тривалість (хвилини)",
+        "placeholder": "Введіть тривалість",
+        "required": "Тривалість обов'язкова"
+      },
+      "capacity": {
+        "label": "Максимальна місткість",
+        "placeholder": "Введіть максимальну місткість",
+        "required": "Максимальна місткість обов'язкова"
+      }
+    },
+    "delete": {
+      "title": "Видалити тренування",
+      "message": "Ви впевнені, що хочете видалити це тренування? Цю дію неможливо скасувати.",
+      "confirm": "Видалити",
+      "success": "Тренування успішно видалено",
+      "error": "Помилка при видаленні тренування"
+    },
+    "minutes": "хвилин",
+    "capacity": "учасників",
+    "tariffs": {
+      "dialog": {
+        "title": "Керування тарифами для {{name}}",
+        "empty": "Немає доступних тарифів. Будь ласка, спочатку додайте тарифи.",
+        "select": "{{name}}"
+      }
+    },
+    "workout": {
+      "title": "Тренування: {{name}}"
+    }
+  },
+  "header": {
+    "profile": "Профіль",
+    "logout": "Вийти"
+  },
   "emailConfirmation": {
     "pageTitle": "Підтвердження електронної пошти",
     "title": "Перевірте вашу електронну пошту",
@@ -283,8 +339,7 @@
         "text": "Будь ласка, спробуйте ще раз або",
         "link": "Увійдить"
       }
-    },
-    "loading": "Підтвердження вашої електронної пошти..."
+    }
   },
   "registration": {
     "pageTitle": "Реєстрація",
@@ -403,11 +458,42 @@
       }
     }
   },
-  "header": {
-    "profile": "Профіль",
-    "logout": "Вийти"
+  "tenant": {
+    "create": {
+      "pageTitle": "Створити фітнес-клуб",
+      "title": "Створити новий фітнес-клуб",
+      "subtitle": "Введіть деталі вашого фітнес-клубу нижче"
+    },
+    "form": {
+      "name": {
+        "label": "Назва клубу",
+        "placeholder": "Введіть назву клубу",
+        "required": "Назва клубу обов'язкова"
+      },
+      "description": {
+        "label": "Опис",
+        "placeholder": "Введіть опис клубу (необов'язково)"
+      },
+      "locale": {
+        "label": "Мова за замовчуванням",
+        "required": "Будь ласка, виберіть мову за замовчуванням для вашого клубу"
+      },
+      "button": {
+        "create": "Створити клуб",
+        "creating": "Створення..."
+      }
+    }
   },
   "schedule": {
+    "create": {
+      "pageTitle": "Створити розклад",
+      "title": "Створити новий розклад",
+      "success": "Розклад успішно створено",
+      "error": "Не вдалося створити розклад"
+    },
+    "edit": {
+      "pageTitle": "Редагувати розклад"
+    },
     "weekly_view": "Тижневий вигляд",
     "daily_view": "Щоденний вигляд",
     "days": {
