Admin console: third alignment of localization assets

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -540,7 +540,8 @@
   "payment": {
     "status": {
       "completed": "Completed",
-      "canceled": "Canceled"
+      "canceled": "Canceled",
+      "pending": "Pending"
     }
   }
 }
