--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -312,13 +312,12 @@
     }
   },
   "header": {
-    "profile": "Профіль",
     "logout": "Вийти"
   },
   "emailConfirmation": {
     "pageTitle": "Підтвердження електронної пошти",
-    "title": "Перевірте вашу електронну пошту",
-    "message": "Ми надіслали лист із посиланням для підтвердження на вашу електронну пошту. Будь ласка, перевірте свою пошту та натисніть на посилання, щоб активувати свій обліковий запис.",
+    "title": "Потрібно підтвердити електронну пошту",
+    "message": "Дякуємо за реєстрацію! Ми надіслали лист підтвердження на вашу адресу. Будь ласка, перевірте свою пошту та натисніть на посилання підтвердження, щоб активувати свій обліковий запис.",
     "login": {
       "text": "Вже підтвердили свою електронну адресу?",
       "link": "Увійти"
@@ -326,18 +325,25 @@
   },
   "confirmEmail": {
     "pageTitle": "Підтвердження електронної пошти",
+    "loading": {
+      "title": "Підтвердження електронної пошти",
+      "message": "Будь ласка, зачекайте, поки ми підтвердимо вашу електронну адресу..."
+    },
     "success": {
-      "title": "Електронну пошту підтверджено!",
-      "message": "Ваша електронна пошта була успішно підтверджена. Тепер ви можете увійти до свого облікового запису.",
-      "login": "Увійти"
+      "title": "Електронну пошту підтверджено",
+      "message": "Вашу електронну пошту успішно підтверджено.",
+      "login": {
+        "text": "Тепер ви можете",
+        "link": "увійти"
+      }
     },
     "error": {
       "title": "Помилка підтвердження",
-      "message": "Не вдалося підтвердити вашу електронну пошту. Посилання може бути недійсним або закінчився термін його дії.",
-      "register": "Зареєструватися знову",
+      "noToken": "Токен підтвердження не надано. Будь ласка, використовуйте посилання з листа підтвердження.",
+      "generic": "Сталася помилка під час підтвердження вашої електронної пошти. Будь ласка, спробуйте ще раз або зверніться до служби підтримки.",
       "retry": {
         "text": "Будь ласка, спробуйте ще раз або",
-        "link": "Увійдить"
+        "link": "увійти"
       }
     }
   },
@@ -349,16 +355,12 @@
       "firstName": {
         "label": "Ім'я",
         "placeholder": "Введіть ваше ім'я",
-        "required": "Ім'я обов'язкове",
-        "minLength": "Ім'я має містити щонайменше {{length}} символи",
-        "maxLength": "Ім'я не може перевищувати {{length}} символів"
+        "required": "Ім'я обов'язкове"
       },
       "lastName": {
         "label": "Прізвище",
         "placeholder": "Введіть ваше прізвище",
-        "required": "Прізвище обов'язкове",
-        "minLength": "Прізвище має містити щонайменше {{length}} символи",
-        "maxLength": "Прізвище не може перевищувати {{length}} символів"
+        "required": "Прізвище обов'язкове"
       },
       "email": {
         "label": "Електронна пошта",
@@ -368,23 +370,29 @@
       },
       "phoneNumber": {
         "label": "Номер телефону",
-        "placeholder": "Введіть ваш номер телефону (напр. +380501234567)"
+        "placeholder": "Введіть ваш номер телефону",
+        "pattern": "Будь ласка, введіть дійсний номер телефону"
       },
       "password": {
         "label": "Пароль",
-        "placeholder": "Створіть пароль",
+        "placeholder": "Введіть ваш пароль",
         "required": "Пароль обов'язковий",
-        "minLength": "Пароль має містити щонайменше {{length}} символів",
+        "minLength": "Пароль має містити щонайменше 8 символів",
         "pattern": "Пароль повинен містити принаймні одну велику літеру, одну малу літеру, одну цифру та один спеціальний символ"
       },
       "confirmPassword": {
         "label": "Підтвердіть пароль",
         "placeholder": "Введіть пароль ще раз",
-        "required": "Підтвердження пароля обов'язкове",
+        "required": "Будь ласка, підтвердіть ваш пароль",
         "mismatch": "Паролі не співпадають"
       },
       "locale": {
-        "label": "Мова"
+        "label": "Мова",
+        "required": "Будь ласка, виберіть вашу мову"
+      },
+      "button": {
+        "register": "Зареєструватися",
+        "loading": "Реєстрація..."
       },
       "submit": {
         "label": "Зареєструватися",
@@ -404,9 +412,7 @@
     "create": {
       "pageTitle": "Додати тренера",
       "title": "Додати нового тренера",
-      "subtitle": "Заповніть дані тренера нижче",
-      "success": "Тренера успішно додано",
-      "error": "Помилка при додаванні тренера"
+      "subtitle": "Заповніть дані тренера нижче"
     },
     "edit": {
       "pageTitle": "Редагувати тренера",
@@ -414,8 +420,7 @@
       "subtitle": "Оновіть дані тренера"
     },
     "update": {
-      "success": "Дані тренера оновлено",
-      "error": "Помилка при оновленні даних тренера"
+      "success": "Дані тренера оновлено"
     },
     "delete": {
       "title": "Видалити тренера",
@@ -492,21 +497,44 @@
       "error": "Не вдалося створити розклад"
     },
     "edit": {
-      "pageTitle": "Редагувати розклад"
+      "pageTitle": "Редагувати розклад",
+      "title": "Редагувати розклад",
+      "success": "Розклад успішно оновлено",
+      "error": "Не вдалося оновити розклад"
     },
+    "load": {
+      "error": "Не вдалося завантажити деталі розкладу"
+    },
+    "capacity": "Місткість",
+    "no_schedules": "Немає розкладів на цей день",
     "weekly_view": "Тижневий вигляд",
     "daily_view": "Щоденний вигляд",
-    "days": {
-      "monday": "Понеділок",
-      "tuesday": "Вівторок",
-      "wednesday": "Середа",
-      "thursday": "Четвер",
-      "friday": "П'ятниця",
-      "saturday": "Субота",
-      "sunday": "Неділя"
-    },
-    "no_schedules": "Немає розкладів на цей день",
-    "classes": "занять"
+    "form": {
+      "workout": "Тренування",
+      "selectWorkout": "Виберіть тренування",
+      "workoutRequired": "Будь ласка, виберіть тренування",
+      "trainer": "Тренер",
+      "selectTrainer": "Виберіть тренера",
+      "trainerRequired": "Будь ласка, виберіть тренера",
+      "daysOfWeek": "Дні тижня",
+      "daysRequired": "Будь ласка, виберіть принаймні один день",
+      "startTime": "Час початку",
+      "startTimeRequired": "Потрібно вказати час початку",
+      "endTime": "Час завершення",
+      "endTimeRequired": "Потрібно вказати час завершення",
+      "capacity": "Максимальна місткість",
+      "capacityRequired": "Максимальна місткість обовʼязкова",
+      "capacityMin": "Місткість має бути щонайменше 1",
+      "days": {
+        "monday": "Понеділок",
+        "tuesday": "Вівторок",
+        "wednesday": "Середа",
+        "thursday": "Четвер",
+        "friday": "П'ятниця",
+        "saturday": "Субота",
+        "sunday": "Неділя"
+      }
+    }
   },
   "payment": {
     "status": {
