--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -5,8 +5,8 @@
     "save": "Зберегти",
     "saving": "Збереження...",
     "loading": "Завантаження...",
-    "previous": "Попередній",
-    "next": "Наступний",
+    "previous": "Попередня",
+    "next": "Наступна",
     "page": "Сторінка",
     "of": "з",
     "close": "Закрити",
@@ -14,21 +14,21 @@
     "name": "Ім'я",
     "email": "Електронна пошта",
     "phone": "Телефон",
-    "joinedAt": "Приєднався",
+    "joinedAt": "Дата приєднання",
     "create": "Створити",
     "edit": "Редагувати",
     "delete": "Видалити",
     "days": "днів",
     "validation": {
       "required": "Це поле обов'язкове",
-      "min": "Значення має бути не менше {{min}}",
+      "min": "Значення має бути щонайменше {{min}}",
       "email": "Будь ласка, введіть дійсну адресу електронної пошти"
     },
     "status": "Статус",
     "trainingsCount": "Кількість тренувань",
-    "validDays": "Дійсно днів",
+    "validDays": "Дійсні дні",
     "price": "Ціна",
-    "createdAt": "Створено",
+    "createdAt": "Дата створення",
     "actions": "Дії",
     "remainingTrainings": "Залишилось тренувань",
     "subscriptionExpiration": "Підписка закінчується",
@@ -36,7 +36,12 @@
     "custom": "Індивідуальний",
     "remaining": "залишилось",
     "error": {
-      "invalid": "Невірне значення"
+      "invalid": "Недійсне значення",
+      "generic": "Сталася помилка. Будь ласка, спробуйте ще раз.",
+      "notFound": "Запитуваний ресурс не знайдено.",
+      "forbidden": "У вас немає дозволу на виконання цієї дії.",
+      "serverError": "Сталася помилка сервера. Будь ласка, спробуйте пізніше.",
+      "emailExists": "Обліковий запис з цією електронною поштою вже існує."
     }
   },
   "login": {
@@ -437,7 +442,12 @@
     "create": {
       "pageTitle": "Додати тренера",
       "title": "Додати нового тренера",
-      "subtitle": "Заповніть дані тренера нижче"
+      "subtitle": "Заповніть дані тренера нижче",
+      "success": "Тренера успішно створено",
+      "error": {
+        "emailExists": "Тренер з цією електронною поштою вже існує. Будь ласка, використайте іншу електронну пошту.",
+        "generic": "Не вдалося створити тренера. Будь ласка, спробуйте ще раз."
+      }
     },
     "edit": {
       "pageTitle": "Редагувати тренера",
@@ -445,7 +455,11 @@
       "subtitle": "Оновіть дані тренера"
     },
     "update": {
-      "success": "Дані тренера оновлено"
+      "success": "Дані тренера оновлено",
+      "error": {
+        "emailExists": "Тренер з цією електронною поштою вже існує. Будь ласка, використайте іншу електронну пошту.",
+        "generic": "Не вдалося оновити тренера. Будь ласка, спробуйте ще раз."
+      }
     },
     "delete": {
       "title": "Видалити тренера",
