Adjust label for amount of classes

--- a/ui/admin/src/assets/i18n/en.json
+++ b/ui/admin/src/assets/i18n/en.json
@@ -548,7 +548,7 @@
     "no_schedules": "No schedules for this day",
     "weekly_view": "Weekly View",
     "daily_view": "Daily View",
-    "classes": "classes",
+    "classes": "Classes:",
     "days": {
       "monday": "Monday",
       "tuesday": "Tuesday",
