--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -548,7 +548,7 @@
     "no_schedules": "Немає розкладів на цей день",
     "weekly_view": "Тижневий вигляд",
     "daily_view": "Щоденний вигляд",
-    "classes": "занять",
+    "classes": "Занять:",
     "days": {
       "monday": "Понеділок",
       "tuesday": "Вівторок",
