--- a/ui/admin/src/assets/i18n/uk.json
+++ b/ui/admin/src/assets/i18n/uk.json
@@ -153,6 +153,7 @@
       },
       "details": {
         "title": "Деталі клієнта: {{name}}",
+        "pageTitle": "Деталі клієнта",
         "payments": {
           "title": "Історія платежів",
           "empty": "Платежів не знайдено",
@@ -212,7 +213,7 @@
     },
     "details": {
       "pageTitle": "Деталі локації клубу",
-      "title": "Деталі клубу",
+      "title": "Деталі локації клубу",
       "club_location_title": "Деталі локації клубу",
       "tabs": {
         "workouts": "Тренування",
