change uk property file encoding

--- a/src/main/resources/i18n/messages_uk.properties
+++ b/src/main/resources/i18n/messages_uk.properties
@@ -1,2 +1,2 @@
-email.subject.admin.registration=??????????? ???? ?????????? ?????? ?? Fitavera
-email.subject.client.registration=??? ???????? ?? {0} ?????????? {1}
+email.subject.admin.registration=Підтвердьте свою електронну адресу на Fitavera
+email.subject.client.registration=Вас запросив до {0} користувач {1}
